--- a/opms.plist
+++ b/opms.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.zhongfucaifu.fund</string>
+				<string>com.huawenpicture.opms</string>
 				<key>bundle-version</key>
 				<string>6.0</string>
 				<key>kind</key>
