--- a/opms.plist
+++ b/opms.plist
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>影视平台</string>
+				<string>影视运营</string>
 			</dict>
 		</dict>
 	</array>
